fixed section logos, tooltips visibility

--- a/src/scss/_components.logos.scss
+++ b/src/scss/_components.logos.scss
@@ -3,7 +3,7 @@
 	align-items: center;
 	height: 43px;
 	line-height: 43px;
-	margin: 30px 0;
+	margin: 45px 0;
 	width: 100%;
 }
 
