--- a/styles/main.css
+++ b/styles/main.css
@@ -2915,7 +2915,7 @@ strong {
   align-items: center;
   height: 43px;
   line-height: 43px;
-  margin: 30px 0;
+  margin: 45px 0;
   width: 100%; }
 
 .logo-single__img {
